# AufurWizard

./: CHANGELOG.md  README.md  main.py  pyproject.toml
core/: __init__.py  scanner.py  shredder.py
ui/: dashboard.py  disk_picker.py  file_picker.py  history.py
utils/: logger.py
